# Robotics-Sound-Mapping

./: CMakeLists.txt  Makefile  README.md  basic_readings.ino  brain  brain.cc  presentation_pan.txt  presentation_plan.txt  proj_info.txt  ranger-library.cc  ranger-library.hh  ranger_serial_firmware.ino  world.sh
basic_readings/: basic_readings.ino
brain/: .brain.cc.swp  .rg_robot.cc.swp  CMakeLists.txt  brain.cc  gz_robot.cc  olddriver.cc  ranger-library.cc  rg_robot.cc  robot.cc  robot.hh
models/camera_sensor/: model.sdf
models/linefollow_sensor/: model.config  model.sdf
models/linefollow_sensor/cameradown/: model.config  model.sdf
models/tankbot/: model.sdf
plugins/linefollow_control/: CMakeLists.txt  Makefile  README.md
plugins/microphone_control/: README.md  microphone_control.cc
ranger-library/: CMakeLists.txt  brain.cc  ranger-library.cc
worlds/: andrew.world  line.world  project.world  sim.world  sim2.world  sim3.world  sim4.world  sim5.world
